# libp2p-messaging

./: Cargo.toml
src/: behaviour.rs  codec.rs  config.rs  error.rs  event.rs  handler.rs  lib.rs  message.rs  stream.rs
src/codec/: mod.rs  prost.rs
src/codecs/: bincode.rs  mod.rs  prost.rs
tests/: tests.rs
