[package]
name = "libp2p-messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = "0.53.1"

async-trait = "0.1.74"

bincode = { version = "2.0.0-rc.3", optional = true, features = ["serde"] }
serde = { version = "1.0", default-features = false, optional = true }
prost = { version = "0.12", optional = true }
smallvec = "2.0.0-alpha.1"
futures-bounded = "0.2.3"
tracing = "0.1.40"

[features]
default = []
bincode = ["dep:bincode", "serde"]
prost = ["dep:prost"]
