[package]
name = "libp2p-messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
#libp2p = "0.53.1"
libp2p = { git = "https://github.com/sdbondi/rust-libp2p.git", branch = "add-sr25519-support" }

async-trait = "0.1.74"
prost = { version = ">=0.9, <0.13", optional = true }
smallvec = "2.0.0-alpha.1"
futures-bounded = "0.2.3"
tracing = "0.1.40"

[features]
default = []
prost = ["dep:prost"]
